[package]
name = "snapshot-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snapshot-scanner"
path = "src/main.rs"

[dependencies]
solana-accounts-db = { path = "../solana-accounts-db" }
solana-runtime = { path = "../runtime" }
solana-sdk = { path = "../sdk" }
solana-pubkey = { path = "../pubkey" }
rayon = "1"
bincode = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
